@@ -1,4 +1,4 @@
-/*	$NetBSD: isakmp.c,v 1.27 2007/07/18 12:07:51 vanhu Exp $	*/
+/*	$NetBSD: isakmp.c,v 1.28 2007/09/19 19:29:36 mgrooms Exp $	*/
 
 /* Id: isakmp.c,v 1.74 2006/05/07 21:32:59 manubsd Exp */
 
@@ -1723,6 +1723,20 @@ isakmp_open()
 			return -1;
 		}
 #endif
+
+		if (setsockopt(p->sock, SOL_SOCKET,
+#ifdef __linux__
+					 SO_REUSEADDR,
+#else
+					 SO_REUSEPORT,
+#endif
+					 (void *)&yes, sizeof(yes)) < 0) {
+			plog(LLV_ERROR, LOCATION, NULL,
+				"failed to set REUSE flag on %s (%s).\n",
+				saddr2str(p->addr), strerror(errno));
+			close(p->sock);
+			goto err_and_next;
+		}
 
 		if (setsockopt_bypass(p->sock, p->addr->sa_family) < 0)
 			goto err_and_next;
